--- a/web/public/index.html
+++ b/web/public/index.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/index.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/window.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/graph.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/default.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/buttons.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/window.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/graph.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/default.css">
     <!-- Icon -->
-    <link rel="shortcut icon" href="./assets/icons/ant.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/icons/ant.svg" type="image/x-icon">
     <title>Lem-in</title>
 </head>
 
@@ -92,7 +91,7 @@ bath-EndRoom    <- Room Relations
                 </div>
                 <div class="input_group">
                     <label class="input_title">Text result (Using for Graphic)</label>
-                    <textarea class="input_text" id="tb_Result"></textarea>
+                    <textarea class="input_text" id="tb_Result" placeholder="Nothing To Draw"></textarea>
                 </div>
                 <div class="block" id="b_what-the-project">
                     <div class="card_title">What the project</div>
@@ -126,9 +125,9 @@ bath-EndRoom    <- Room Relations
         </div>
     </div>
     <!-- SCRIPTS -->
-    <script src="./assets/js/d3.min.js"></script>
-    <script src="./assets/js/graph.js"></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="/assets/js/d3.min.js"></script>
+    <script src="/assets/js/graph.js"></script>
+    <script src="/assets/js/index.js"></script>
 </body>
 
 </html>
