HTML & CSS For Moz+Chrome, Writing result Methods + Fetching timeout on client Side

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -106,7 +106,8 @@ bath-EndRoom    <- Room Relations
         <!-- FOOTER -->
         <div class="footer card" id="b_footer">
             <div class="card_text">
-                Author <a href="https://github.com/Dias1c" class="link">Dias1c</a> | Git <a
+                Authors <a href="https://github.com/Dias1c" class="link">Dias1c</a> & <a
+                    href="https://github.com/RaevNur" class="link">nrblzn</a> | Git <a
                     href="https://github.com/Dias1c/lem-in" class="link">Project</a>
             </div>
 
