added gif on readme + fixed bug with hide names

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -127,11 +127,19 @@ bath-EndRoom    <- Room Relations
                         and all this in strictly in sequence [block 1, block 2, block 3] (These rules apply to [Text
                         Result] too)<br><br>
 
-                        After filling in, click on Send and you will get the result in Graphic and text form. The
+                        After filling in, click on <kbd class="dark-apple">Send</kbd> and you will get the result in
+                        Graphic and text form.
+                        The
                         graphic result depends on the Text result. The text result is converted to graphic via the Set
                         Params button. In the graphical result, each path will have its own color, unused paths will be
                         gray.
-                        To apply any changes in the text result or in the parameters then press Set Params.
+                        To apply any changes in the text result or in the parameters then press Set Params.<br><br>
+
+                        Also you can use web version for visualize your result. To do this, insert the map with result
+                        into the `text result` block and click on <kbd class="dark-apple">Set Params</kbd>. Now your
+                        graph is
+                        represented
+                        graphically.
                     </p>
                 </div>
             </div>
