--- a/web/public/error.html
+++ b/web/public/error.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Style -->
-    <link rel="stylesheet" type="text/css" href="./assets/css/window.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/buttons.css">
-    <link rel="stylesheet" type="text/css" href="./assets/css/default.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/window.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/buttons.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/default.css">
     <!-- Icon -->
-    <link rel="shortcut icon" href="./assets/icons/ant.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/icons/ant.svg" type="image/x-icon">
     <title>{{ .Title }}</title>
 </head>
 
