docker support + added resize btn on front

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -59,6 +59,11 @@ bath-EndRoom    <- Room Relations
                     <div class="block_l">
                         <label class="input_title">Graphic result</label>
                         <div class="result" id="b_result">
+                            <div class="result__params">
+                                <div class="btn btn--icon btn--gray" id="btn_ResultResize"><img
+                                        src="/assets/icons/resize.svg" alt="resize">
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="block_r">
