fixed How to use block on front

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -108,7 +108,7 @@ bath-EndRoom    <- Room Relations
                 <div class="block" id="b_what-the-project">
                     <div class="card_subtitle">What the project</div>
                     <p>
-                        This is the visual part of the work of the program "program", where the essence of the task is
+                        This is the visual part of the work of the program "lem-in", where the essence of the task is
                         for ants from point A to point B to find paths that will make up the minimum number of
                         steps.<br>
                         Read more about the project <a href="https://github.com/Dias1c/lem-in/wiki" class="link">here<a>
@@ -126,7 +126,9 @@ bath-EndRoom    <- Room Relations
 
                         Rules for [block 1] the number of Ants must be greater than zero<br>
                         Rules for [block 2] the room must consist of a name, X coordinates and Y coordinates separated
-                        by a space (Name X Y). Each room in 1 line<br>
+                        by a space (Name X Y). Each room in 1 line. Important! This block should contain one start, end
+                        room each. These rooms are identified by the tags (##start, ##end) in front of the room line.
+                        <br>
                         Rules for [block 3] the rooms are connected to each other by a hyphen. Each relation is in 1
                         line<br>
                         and all this in strictly in sequence [block 1, block 2, block 3] (These rules apply to [Text
