fix: index.html - nav menu & links

--- a/internal/web/public/index.html
+++ b/internal/web/public/index.html
@@ -21,13 +21,13 @@
     <div class="main">
         <!-- HEADER -->
         <div class="header card">
-            <div class="header__title"><a class="link" href="">Lem-in</a></div>
-            <div class="header__menu">
+            <div class="header__title"><a class="link" href="/">Lem-in</a></div>
+            <nav class="header__menu">
                 <a class="header__menu__element" href="#b_main">Main</a>
                 <a class="header__menu__element" href="#b_what-the-project">About</a>
                 <a class="header__menu__element" href="#b_how-to-use">Help</a>
                 <a class="header__menu__element" href="#b_footer">Authors</a>
-            </div>
+            </nav>
         </div>
         <!-- CONTENT -->
         <div class="content">
@@ -35,7 +35,7 @@
                 <div class="card_title">Sender Form</div>
                 <div class="form">
                     <div class="input_group">
-                        <label class="input_title">Input map</label>
+                        <label class="input_title">Input <a class="link" href="/maps">map</a></label>
                         <textarea name="input_text" class="input_text" id="tb_Content" minlength="1" placeholder="#Example        <- Comment
 10              <- Count ants
 ##start         <- It means next line is start room
